--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
   "devDependencies": {
     "@eslint/css": "^0.6.0",
     "@eslint/js": "^9.24.0",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react-swc": "^3.8.1",
     "eslint": "^9.24.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "terser": "^5.39.0",
-    "unplugin-zip-pack": "^1.0.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1",
     "vite": "^6.2.6",
     "vite-plugin-cp": "^6.0.0",
     "vite-plugin-html-template-mpa": "^1.0.29",
