--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "countries-flags-redux",
+  "name": "countries-flags",
   "private": true,
   "version": "1.0.0",
   "author": {
@@ -7,7 +7,7 @@
     "email": "leograndprix@gmail.com",
     "url": "https://leograndprix.ru"
   },
-  "homepage": "https://github.com/Leogrand20/countries-flags-redux",
+  "homepage": "https://github.com/Leogrand20/countries-flags",
   "categories": [
     "Other"
   ],
@@ -15,11 +15,13 @@
   "main": "index.tsx",
   "type": "module",
   "scripts": {
-    "c": "rd /s /q dist",
-    "dev": "vite --host",
-    "build": "vite build",
-    "preview": "vite preview --host --port 4000",
-    "bp": "vite build&&vite preview --host --port 4000"
+    "clear": "rd /s /q dist",
+    "dev": "vite --host --port 8000 --open",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview --open",
+    "buildpreview": "tsc -b && vite build&&vite preview --host --port 4000 --open",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "@eslint/css": "^0.7.0",
@@ -27,11 +29,20 @@
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.3.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
+    "jiti": "^2.4.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.1",
     "vite": "^6.3.4",
