--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,18 +1,20 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.app.json",
   "compilerOptions": {
     "noEmit": true,
-
-    // 🔧 Переопределения, необходимые для ESLint
-    "moduleResolution": "NodeNext", // ESLint не понимает "bundler"
-    "module": "ESNext",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "types": ["node"] // минимальный набор типов, чтобы ESLint не ругался
+    "types": ["node"]
   },
-  "include": ["src", "index.tsx", "eslint.config.ts", "vite.config.ts"],
+  "include": [
+    "src",
+    "index.tsx",
+    "eslint.config.ts",
+    "vite.config.ts",
+    "webpack.alias.ts"
+  ],
   "exclude": ["dist", "node_modules"]
 }
