--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@eslint/css": "^0.11.1",
     "@eslint/js": "^9.36.0",
     "@eslint/markdown": "^7.3.0",
+    "@tailwindcss/vite": "^4.1.14",
     "@types/eslint-plugin-jsx-a11y": "^6.10.0",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.14",
@@ -55,7 +56,7 @@
     "typescript-eslint": "^8.44.1",
     "vite": "^7.1.7",
     "vite-plugin-cp": "^6.0.3",
-    "vite-plugin-html-template-mpa": "^1.0.29",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-inspect": "^11.3.3",
     "vite-plugin-legacy-swc": "^2.0.0",
     "vite-plugin-svgr": "^4.5.0",
@@ -72,5 +73,8 @@
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "uuid": "^13.0.0"
+  },
+  "overrides": {
+    "glob": "^10.3.10"
   }
 }
