--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,38 +4,40 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["ES2024", "DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["src/shared/*"],
       "@app/*": ["src/app/*"],
-      "@components/*": ["src/components/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@layouts/*": ["src/layouts/*"],
+      "@shared/*": ["src/shared/*"],
+      "@entities/*": ["src/entities/*"],
+      "@features/*": ["src/features/*"],
+      "@widgets/*": ["src/widgets/*"],
       "@pages/*": ["src/pages/*"],
-      "@store/*": ["src/store/*"],
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@hooks/*": ["src/hooks/*"],
       "@utils/*": ["src/utils/*"],
+      "@store/*": ["src/store/*"],
+      /* алиасы для Tailwind и статических ассетов */
       "@css/*": ["src/app/styles/*"],
       "@fonts/*": ["src/shared/assets/fonts/*"],
       "@img/*": ["src/shared/assets/img/*"],
       "@icons/*": ["src/shared/assets/icons/*"]
     },
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "allowSyntheticDefaultImports": true, // import * as api => import api from '../api'
+    "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "esModuleInterop": true, // commonJS => import
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "moduleDetection": "force",
-    "resolveJsonModule": true, // import './*.json'
+    "resolveJsonModule": true,
     "noEmit": true,
     "jsx": "react-jsx",
     "outDir": "dist",
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -53,5 +55,8 @@
     "vite.config.ts",
     "webpack.alias.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
